navbar v1 + arreglo h.html

--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
     </head>
-    <body >
-        <header>
-            <a href="./h.html">La verduleria del pendejo</a>
-            <nav>
+    <body>
+        <header class = "header_class">
+            <a href="./index.html" class="inicio_header">
+                <img src = "platano1.png" alt="platano" width="50px" height="50px" style = "background-color: transparent;position:relative;top:30px;">
+                <button>Frutas&nbsp;y&nbsp;verduras <br>Infante</button></a>
+            <nav id="links_nav">
                 <ul class = "links_navegacion">
-                    <!--<li style = "background-color: #1D8348;padding: 9px 10px; border:none;border-radius: 50px;"><a href="./" style = "background-color: #1D8348;color:white">¡Pide tus verduras aquí!</a></li>-->
-                    <li><a href="./">¡Pide tus verduras aquí!</a></li>
-                    <li><a href="./">Productos</a></li>
-                    <li><a href="./">¿Quienes somos?</a></li>
+                    <li><a href="./index.html"><img src="durazno.png" width="20px" height="20px">Inicio</a></li>
+                    <li><a href="./index.html" ><img src="durazno.png" width="20px" height="20px">Preguntas</a></li>
+                    <li><a href="./index.html"><img src="durazno.png" width="20px" height="20px">¿Quienes somos?</a></li>
                 </ul>
             </nav>
-            <a href="./" class = "cta"><button>Contáctame</button></a>
+            <a href="./index.html" class = "cta"><button>Contáctame</button></a>
           </header>
+          <hr class = "hr_header">
 
     </body>
 </html>
