algo de responsive

--- a/preguntas.html
+++ b/preguntas.html
@@ -23,8 +23,13 @@
             <a href="./index.html" class = "cta"><button>Contáctame</button></a>
           </header>
           <hr class = "hr_header">
-          <div style = "margin:2%">
-            <h1>Productos</h1>
+          <div class="preguntas">
+            <h1>Preguntas</h1>
+            <ol>
+                <li>¿Cómo compro?</li>
+                <li>¿Cómo pago?</li>
+                <li>¿Cuando llegara mi pedido?</li>
+            </ol>
             </div>
 
 
